<resources>
    <string name="app_name">Health care</string>
    <string name="title_activity_main">Health care Supporter</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate</string>
    <string name="nav_home">Home</string>
    <string name="nav_relatives_list">Manage relative information</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>

    <!--Login-->
    <string name="hintYourPassword">Your password</string>
    <string name="hintYourEmail">Your email</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="login">Login With Password</string>
    <string name="signup">Sign Up</string>
    <string name="forget_password">Can\'t remember your password?</string>
    <string name="err_login">Please checking your network!</string>
    <string name="err_invalid_info_login">User name or password invalid!!!</string>

    <!--Create information of relative-->
    <string name="nameText">Name </string>
    <string name="phoneText">Phone </string>
    <string name="err_image">Choose image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Relatives-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="title_activity_add_edit_task">AddEditTaskActivity</string>

    <!-- Reminder -->
    <string name="ae_reminder_name">Reminder short</string>
    <string name="ae_reminder_start">Start date</string>
    <string name="ae_reminder_end">End date</string>
    <string name="ae_reminder_repeat">Repeat</string>
    <string name="ae_reminder_note">Notes</string>
    <string name="snoozeAlert">Snooze after 10 minutes</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_list">Manage reminders</string>


    <string name="my_web_client_id">828026602604-bp4fq1gj71lh7h5po9gnotblq8sia4to.apps.googleusercontent.com</string>
    <string name="err_email_password_null">Email or password is empty</string>
    <string name="ae_reminder_hint">What you need to reminder?</string>
    <string name="ae_reminder_note_hint">Type your note detail here</string>
    <string name="ae_reminder_picktime">Reminder Time</string>

    <!-- Do not change position -->
    <string-array name="repeat_array">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="title_activity_confirm_falling">ConfirmFallingActivity</string>
    <string name="confirm_label_confirm">Confirm if you are ok</string>
    <string name="confirm_get_status">Are you falling down?</string>
    <string name="confirm_calling">Hold on ,\n I\'m finding assistant for you</string>
    <string name="calling_someone">Calling … %1$s</string>
    <string name="calling_out_of_bound">We can\'t reach your relatives</string>
    <string name="calling_emergency_service">Calling emergency service</string>
    <string name="home_enable_fall_detect">Enable fall detect</string>
    <string name="home_allow_tracking">Allow relatives find me</string>
    <string name="profile_height">Height (cm)</string>
    <string name="profile_weight">Weight (kg)</string>
    <string name="profile_is_male">Male</string>
    <string name="profile_is_female">Female</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_update">Update</string>
    <string name="label_complete">Success</string>
    <string name="label_loading">Loading</string>
    <string name="home_require_profile_config">Please update your profile to continue</string>

    <string name="profile_age">Age</string>
    <string name="err_invalid_info_profile">Invalid information!!!</string>
    <string name="confirm_you_are_ok">You are OK!</string>
    <string name="location_not_found">Sorry, we can\'t find the location, please try again later</string>

    <string name="location_denied">Sorry, Your relative denied our location service permission.</string>
    <string name="update_success">Update successfully</string>
    <string name="signin_fail">Sign in failed!!</string>
    <string name="err_empty_info_relative">Name or phone is empty!!!</string>
    <string name="err_empty_name_reminder">Please input reminder name</string>
    <string name="confirm_you_are_fall">It\'s look like you are fallen. We are trying to get contact with your relative</string>
    <string name="tittle_home">Health care supporter</string>
    <string name="open_app">Touch to open</string>
    <string name="tittle_relatives">Manage relative information</string>
    <string name="tittle_profile">Profile</string>

    <string name="tab_day">Day</string>
    <string name="tab_time">Time</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <string name="profile_sensitive">Sensitive</string>
    <string name="request_permissions_desc">We have to request these permissions to get the app working correctly\nOpen Setting -> Permission -> Allow all the request</string>
    <string name="request_permissions">Request permissions</string>
    <string name="request_permissions_deny">Sorry, You have to allow all the permission to get the app working correctly</string>
    <string name="ae_reminder_add_alarm">Add Alarm</string>
    <string name="ae_reminder_add_reminder">Add Reminder</string>
    <string name="ae_reminder_update_reminder">Update Reminder</string>
    <string name="ae_reminder_alarms_lists">Alarms List</string>
    <string name="ae_reminder_confirm_delete_time">Are you sure you want to delete this alarm time?</string>
    <string name="ae_reminder_require_alarm_time">You should have at least 1 alarm time by Add Alarm</string>
    <string name="err_empty_note_reminder">Please type your note</string>
    <string name="duplicate_reminder">This alarm time is exist</string>
    <string name="check_alarm_time">Sorry, please check your alarms time to ensure no duplicate time</string>
</resources>
